[package]
name = "Mitron-Support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
tracing = "0.1"
tracing-subscriber = "0.2"
sqlx = { features = [ "postgres", "tls", "runtime-async-std-native-tls", "macros", "uuid", "offline", "chrono" ] }